# daruu

./: .dockerignore  .gitignore  DEBUG_MODE.md  DEBUG_QUICK_START.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATION_STATUS.md  OPTIMIZATION_TROUBLESHOOTING.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  TEST_DEBUG_MODE.md  VERIFY_OPTIMIZATIONS.sh  s.json
apps/api/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  TESTING_EXTRACTION.md  celery_worker.py  example_pipeline.py  mcp_server.py  pyproject.toml  requirements.txt  response.json  visualize_extraction.py
apps/api/app/: __init__.py  admin_routes.py  admin_service.py  config.py  context.py  main.py  models.py  prompts.py  routes.py  segmentation_docling.py  segmentation_fitz.py  services.py  spatial.py
apps/api/app/adapters/: __init__.py
apps/api/app/adapters/dto/: __init__.py  analyze.py  extract.py  fill.py  review.py
apps/api/app/agents/: __init__.py  llm_wrapper.py  retry.py
apps/api/app/agents/extract/: __init__.py  value_extraction_agent.py
apps/api/app/agents/mapping/: __init__.py  mapping_agent.py
apps/api/app/application/: __init__.py
apps/api/app/domain/: __init__.py  entities.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/mcp/: MCP_DOCKER_GUIDE.md  __init__.py  logging.py  server.py  session.py  storage.py
apps/api/app/middleware/: cache_middleware.py
apps/api/app/models/: __init__.py  acroform.py  annotation.py  common.py  conversation.py  cost.py  data_source.py  document.py  edit.py  evidence.py  field.py  health.py  job.py  processing_strategy.py  prompt_attempt.py  task.py  template.py  template_schema.py
apps/api/app/orchestrator/: __init__.py  decision_engine.py  factories.py  orchestrator.py  pipeline_executor.py  service_client.py
apps/api/app/repositories/: __init__.py  annotation_pair_repository.py  conversation_repository.py  correction_repository.py  data_source_repository.py  document_repository.py  edit_repository.py  embedding_gateway.py  event_publisher.py  file_repository.py  job_repository.py  message_repository.py  prompt_attempt_repository.py  rule_snippet_repository.py  template_repository.py  vector_db_gateway.py
apps/api/app/routes/: __init__.py  adjust.py  analyze.py  annotations.py  auth.py  autofill_pipeline.py  conversations.py  corrections.py  data_sources.py  documents.py  edits.py  extract.py  extract_service.py  fill.py  fill_service.py  generate.py  health.py  ingest.py  jobs.py  mapping.py  mcp_upload.py  prompt_attempts.py  review.py  review_service.py  rules.py  structure_labelling.py  templates.py  vision_autofill.py
apps/api/app/scripts/: __init__.py  export_openapi.py
apps/api/app/services/: __init__.py  cache.py  conversation_logger.py  cost_tracking.py  document_service.py  http_client.py  job_service.py  llm_analyze.py  pdf_engine.py  pdf_generate_manual.py  pdf_render.py  template_service.py  text_extraction_service.py
apps/api/migrations/: 001_create_persistence.sql
apps/api/tests/: __init__.py  conftest.py  test_acroform_e2e.py  test_agent_proposals.py  test_analysis_prompts.py  test_api_contracts.py  test_autofill_pipeline_enricher_config.py  test_benchmark.py  test_candidate_filter.py  test_celery_tasks.py  test_chunker.py  test_context_service.py  test_contracts.py  test_conversation_logger.py  test_conversation_models.py  test_conversations.py  test_correction_repository.py  test_correction_routes.py  test_correction_tracker.py  test_cost_tracking.py  test_decision_engine.py  test_edit_flow.py  test_edit_models.py  test_edit_repository.py  test_edit_routes.py  test_edit_service.py  test_embedding_gateway.py  test_export_openapi.py  test_generate.py  test_health.py  test_ingest_models.py  test_job_cost_integration.py  test_label_enrichment.py  test_llm_field_enricher_v2.py  test_main.py  test_models.py  test_orchestrator.py  test_pipeline_fill_first.py  test_pipeline_integration.py  test_plan_with_answers.py  (+31 more)
apps/contracts/: README.md  pyproject.toml
apps/contracts/examples/documents/: get_response.json  upload_request.json  upload_response.json
apps/contracts/examples/errors/: conflict.json  internal_error.json  not_found.json  validation_error.json
apps/contracts/examples/extract/: request.json  response.json
apps/contracts/examples/jobs/: activity_response.json  answers_request.json  answers_response.json  create_request.json  create_response.json  edits_request.json  edits_response.json  evidence_response.json  get_response.json  review_response.json  run_request.json  run_response.json
apps/contracts/openapi/: api.yaml
apps/contracts/schemas/: activity.json  common.json  document.json  error.json  evidence.json  extract.json  extraction.json  field.json  issue.json  job-request.json  job-response.json  job.json  job_context.json  mapping.json
apps/contracts/scripts/: check_contracts.py  export_openapi.py  generate_pydantic.py  generate_typescript.py
apps/contracts/tests/: __init__.py  test_contract_validation.py  test_openapi_validation.py  test_pact_contracts.py  test_schema_validation.py
apps/orchestrator/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
apps/orchestrator/app/: __init__.py  config.py  main.py
apps/orchestrator/app/models/: __init__.py  activity.py  job_context.py  pipeline.py
apps/orchestrator/app/routes/: __init__.py  jobs.py
apps/orchestrator/app/services/: __init__.py
apps/orchestrator/app/storage/: __init__.py  job_store.py
apps/rule-service/: Dockerfile  Dockerfile.dev  pyproject.toml
apps/rule-service/app/: config.py  main.py
apps/rule-service/app/infrastructure/: embedding.py  llm_client.py  resilience.py  supabase_client.py
apps/rule-service/app/repositories/: memory_impl.py  protocol.py  supabase_impl.py
apps/rule-service/app/routes/: health.py  rules.py
apps/rule-service/app/schemas/: api_schemas.py  rule_schemas.py
apps/rule-service/app/services/: chunker.py  rule_analyzer.py
apps/rule-service/tests/: conftest.py  test_chunker.py  test_rule_analyzer.py  test_rules_api.py
(+599 files in other folders)
