[project]
name = "daru-pdf-api"
version = "0.0.0"
description = "Daru PDF API"
requires-python = ">=3.11,<4"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "reportlab>=4.2.0",
  "pypdf",
  "PyMuPDF",
  "pytest",
  "httpx",
  "supabase",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]