[project]
name = "daru-pdf-contracts"
version = "0.1.0"
description = "Daru PDF Contract Definitions - OpenAPI specs, JSON Schemas, and examples"
requires-python = ">=3.11,<4"
dependencies = [
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
    "openapi-spec-validator>=0.7.1",
    "datamodel-code-generator>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "coverage>=7.4.0",
]

[project.scripts]
export-openapi = "scripts.export_openapi:main"
generate-typescript = "scripts.generate_typescript:main"
generate-pydantic = "scripts.generate_pydantic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "openapi", "examples"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
